# tectonic-terrain

./: .README.txt.swp  .argparser.h.swp  .gitignore  CMakeLists.txt  DAN_TODO  DEMO.txt  README.txt  argparser.h  bmp.cpp  bmp.h  boundingbox.h  camera.cpp  camera.h  checkerboard.fs  checkerboard.vs  glCanvas.cpp  glCanvas.h  load_shaders.cpp  main.cpp  matrix.h  mesh.cpp  mesh.h  orange.vs  render.cpp  ter.fs  ter.vs  ter1.vs  vectors.h  vertex.h
TectonicSimulation/TectonicSimulation/: Plate.cpp  Plate.h  Simulation.cpp  Simulation.h  main.cpp
data/: ter.fs  ter.vs
src/: CMakeLists.txt  Overlap.cpp  Overlap.h  Plate.cpp  Plate.h  Simulation.cpp  Simulation.h  argparser.h  bmp.cpp  bmp.h  boundingbox.cpp  edge.cpp  glCanvas.cpp  mesh.cpp  mesh.h  perlin.cpp  render.cpp  vertex.cpp
